--- a/cjl-nginx.ini
+++ b/cjl-nginx.ini
@@ -7,9 +7,9 @@
 ;电报群：https://t.me/qichiyuchat
 
 ;规则集定义
-ruleset=🌍 远程软件,https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/remote.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/ProxyLite.list
+ruleset=🌍 远程软件,https://raw.github.site/cjllin/clash/refs/heads/main/remote.list
+ruleset=🎯 全球直连,https://raw.github.site/cjllin/clash/refs/heads/main/Direct.list
+ruleset=🚀 节点选择,https://raw.github.site/cjllin/clash/refs/heads/main/ProxyLite.list
 ruleset=🤖 AI,https://raw.github.site/qichiyuhub/rule/master/AI.list
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -45,9 +45,9 @@ ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/C
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.github.site/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🎯 全球直连,[]GEOSITE,CN
-ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
+ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
+ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geoip.dat,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
