--- a/cjl-nginx.ini
+++ b/cjl-nginx.ini
@@ -45,9 +45,9 @@ ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/C
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.github.site/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.github.site/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
-ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
-ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geoip.dat,CN
+;ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
+;ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
+;ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geoip.dat,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
