--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -104,4 +104,5 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 
 enable_rule_generator=true
 overwrite_original_rules=true
+update_ruleset_on_request=ture
 
