--- a/cjl.ini
+++ b/cjl.ini
@@ -38,7 +38,7 @@ ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubuserconte
 ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🎥 Netflix,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🎵 TikTok,https://hub.vps.861020.xyz/https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=🎵 TikTok,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🎞️ 国内媒体,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
