--- a/cjl.ini
+++ b/cjl.ini
@@ -110,3 +110,4 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 enable_rule_generator=true
 overwrite_original_rules=true
 update_ruleset_on_request=ture
+enable_cache=false
