--- a/cjl.ini
+++ b/cjl.ini
@@ -1,11 +1,13 @@
-[custom]
+[ruleset]
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 
 ;电报群：https://t.me/qichiyuchat
-
+;启用自定义规则集
+enable_rule_generator=true
+overwrite_original_rules=true
 ;规则集定义
 ruleset=🌍 远程软件,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/remote.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/Direct.list
@@ -56,7 +58,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
 
-
+[proxy_group] 
 custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🌐 台湾节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🌍 远程软件`select`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
@@ -105,9 +107,8 @@ custom_proxy_group=🔯 台湾故转`fallback`(?=.*(台湾|Taiwan))^((?!(家宽|
 custom_proxy_group=⭐ 香港故转`fallback`!!GROUPID=!1!!(香港|HK|Hong Kong|🇭🇰|HongKong)(?!.*(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`380,,50
 custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)(?!.*(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`369,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`500,,50
-;启用自定义规则集
 
-enable_rule_generator=true
-overwrite_original_rules=true
-update_ruleset_on_request=ture
+
+
+[advanced]
 enable_cache=false
