--- a/cjl.ini
+++ b/cjl.ini
@@ -1,4 +1,4 @@
-[ruleset]
+[custom]
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
@@ -6,8 +6,7 @@
 
 ;电报群：https://t.me/qichiyuchat
 ;启用自定义规则集
-enable_rule_generator=true
-overwrite_original_rules=true
+
 ;规则集定义
 ruleset=🌍 远程软件,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/remote.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/Direct.list
@@ -57,8 +56,6 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-
-[proxy_group] 
 custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🌐 台湾节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🌍 远程软件`select`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
@@ -109,6 +106,7 @@ custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!1!!(日本|川日|东京
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`500,,50
 
 
-
+enable_rule_generator=true
+overwrite_original_rules=true
 [advanced]
 enable_cache=false
