--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -7,7 +7,7 @@
 ;电报群：https://t.me/qichiyuchat
 
 ;规则集定义
-ruleset=🍀 VSOL,https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/vsol.list
+ruleset=🍀 VSOL,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/vsol.list
 ruleset=🌍 远程软件,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/remote.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/Direct.list
 ruleset=🚀 节点选择,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/ProxyLite.list
