--- a/cjl.ini
+++ b/cjl.ini
@@ -51,6 +51,7 @@ ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubuserconte
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🚀 节点选择,[]GEOIP,!CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
