--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -50,6 +50,8 @@ ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubuserconte
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
 ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
+ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,CN
+ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,US
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
