--- a/cjl.ini
+++ b/cjl.ini
@@ -8,6 +8,8 @@
 ;启用自定义规则集
 
 ;规则集定义
+ruleset=🍀 VSOL,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/vsol.list
+ruleset=🍀 Skype,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/skype.list
 ruleset=🌍 远程软件,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/remote.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/Direct.list
 ruleset=🚀 节点选择,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/cjllin/clash/refs/heads/main/ProxyLite.list
