--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -17,7 +17,6 @@ ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubuserconte
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=📢 谷歌🇨🇳Play服务,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ;ruleset=🆎 AdBlock,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ;ruleset=🆎 AdBlock,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ;ruleset=🛡️ 隐私防护,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
@@ -25,7 +24,6 @@ ruleset=📢 FCM,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/bl
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=👨🏿‍💻 GitHub,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=👨🏿‍💻 GitHub,clash-classic:https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🍀 Google,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=💧 Copilot,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=🐬 OneDrive,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
@@ -36,9 +34,9 @@ ruleset=♻️ Speedtest,https://hub.vps.861020.xyz/https://raw.githubuserconten
 ruleset=📹 YouTube,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+;ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+;ruleset=🎮 游戏平台,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🎥 Netflix,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎵 TikTok,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🎞️ 国内媒体,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
