--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -51,6 +51,10 @@ ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-r
 ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
 ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,CN
 ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,US
+ruleset=🎯 全球直连,[]GEOSITE,CN
+ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🚀 节点选择,[]GEOIP,US
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
