--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -47,10 +47,10 @@ ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubuserconte
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://hub.vps.861020.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
-ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
-ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,CN
-ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,US
+;ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,CN
+;ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat,geolocation-!cn
+;ruleset=🎯 全球直连,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,CN
+;ruleset=🚀 节点选择,https://testingcf.jsdelivr.net/gh/alecthw/mmdb_china_ip_list@release/lite/Country.mmdb,US
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
