--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -1,4 +1,4 @@
-[custom]
+  [custom]
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
@@ -100,15 +100,15 @@ custom_proxy_group=🌐 台湾节点`select`(?=.*(台湾|Taiwan))
 custom_proxy_group=🌐 南美节点`select`(?=.*(阿根廷|澳大利亚))
 custom_proxy_group=🌐 欧洲节点`select`(?=.*(法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰))
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(美国|台湾|Taiwan|香港|HK|Hong Kong|🇭🇰|HongKong|印度|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
-custom_proxy_group=⭐ 故转`fallback`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 台湾故转`*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 香港故转`fallback`[]♻️ 香港数字系列`[]♻️ 香港油尖系列`[]♻️ 香港其他`*$`http://www.gstatic.com/generate_204`400,,50
-custom_proxy_group=♻️ 香港其他`url-test`(?=.*(^中国-香港$|HK|Hong Kong|🇭🇰|HongKong))^((?!(香港 油尖|香港 (0[1-9]|1[0-6])|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`560,,50
-custom_proxy_group=♻️ 香港油尖系列`url-test`(?=.*(香港 油尖))`http://www.gstatic.com/generate_204`430,,50
-custom_proxy_group=♻️ 香港数字系列`url-test`(?=.*(香港 (0[1-9]|1[0-6])))`http://www.gstatic.com/generate_204`370,,50
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`520,,50
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`560,,50
-custom_proxy_group=🔯 台湾故转`fallback`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`580,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`500,,50
+custom_proxy_group=⭐ 故转`fallback`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 台湾故转`*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 香港故转`fallback`[]♻️ 香港数字系列`[]♻️ 香港油尖系列`[]♻️ 香港其他`*$`https://www.gstatic.com/generate_204`400,,50
+custom_proxy_group=♻️ 香港其他`url-test`(?=.*(^中国-香港$|HK|Hong Kong|🇭🇰|HongKong))^((?!(香港 油尖|香港 (0[1-9]|1[0-6])|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`560,,50
+custom_proxy_group=♻️ 香港油尖系列`url-test`(?=.*(香港 油尖))`https://www.gstatic.com/generate_204`430,,50
+custom_proxy_group=♻️ 香港数字系列`url-test`(?=.*(香港 (0[1-9]|1[0-6])))`https://www.gstatic.com/generate_204`370,,50
+custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`520,,50
+custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`560,,50
+custom_proxy_group=🔯 台湾故转`fallback`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`580,,50
+;custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`500,,50
 
 
 enable_rule_generator=true
