Update custom_proxy_group options in cjl.ini

--- a/cjl.ini
+++ b/cjl.ini
@@ -84,7 +84,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 南美节点`[]🌐 欧洲节点`[]🇸🇬 东南亚节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
