Fix custom_proxy_group for SkypeTeams

--- a/cjl.ini
+++ b/cjl.ini
@@ -60,7 +60,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义
 custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港自动`[]🔯 日本自动`[]🔯 东南亚自动`[]🔯 台湾自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍀 VSOL`select`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
 custom_proxy_group=🌍 远程软件`select`[]DIRECT`[]⭐ 故转`[]🌐 印度节点`[]🔯 香港自动`[]🔯 日本自动`[]🔯 东南亚自动`[]🔯 台湾自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
